Added script's link.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -8,10 +8,12 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="navbar">
         <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
+        <span class="hamburger-icon" onclick="toggleMenu()">&#9776;</span>
         <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
         <a id="services" class="navbar-item" href="Services/index.html">Services</a>
         <a id="data-management-systems" class="navbar-item" href="Data Management Systems/index.html">Data Management Systems</a>
