--- a/ACI/index.html
+++ b/ACI/index.html
@@ -13,7 +13,8 @@
 <body>
     <div id="navbar">
         <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
-        <span class="hamburger-icon" onclick="toggleMenu()">&#9776;</span>
+        <!-- <span id="hamburger-icon" onclick="toggleMenu()">&#9776;</span> -->
+        <span id="hamburger-icon">&#9776;</span>
         <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
         <a id="services" class="navbar-item" href="Services/index.html">Services</a>
         <a id="data-management-systems" class="navbar-item" href="Data Management Systems/index.html">Data Management Systems</a>
