Changed elements structure in navbar.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -14,14 +14,16 @@
     <div id="navbar">
         <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
         <!-- <span id="hamburger-icon" onclick="toggleMenu()">&#9776;</span> -->
-        <span id="hamburger-icon">&#9776;</span>
-        <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
-        <a id="services" class="navbar-item" href="Services/index.html">Services</a>
-        <a id="data-management-systems" class="navbar-item" href="Data Management Systems/index.html">Data Management Systems</a>
-        <a id="assessment-methodology" class="navbar-item" href="Assessment Methodology/index.html">Assessment Methodology </a>
-        <a id="delivery-plan" class="navbar-item" href="Delivery Plan/index.html">Delivery Plan</a>
-        <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
-        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
+        <div id="hamburger-icon">&#9776;</div>
+        <div class="navbar-links">
+            <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
+            <a id="services" class="navbar-item" href="Services/index.html">Services</a>
+            <a id="data-management-systems" class="navbar-item" href="Data Management Systems/index.html">Data Management Systems</a>
+            <a id="assessment-methodology" class="navbar-item" href="Assessment Methodology/index.html">Assessment Methodology</a>
+            <a id="delivery-plan" class="navbar-item" href="Delivery Plan/index.html">Delivery Plan</a>
+            <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
+            <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
+        </div>
     </div>
     <div class="content-container">
         <h2 class="text-header">Introduction</h2>
